scss/partials/_expanded_post.scss
div.expanded-post {
  width: #{$board_container_width}px;
  margin: 0 auto;
  padding: 0 0 24px;
  position: relative;

  @include mobile() {
    width: 100%;
    padding: 16px;
    margin-top: 56px;
    background-color: white;
    padding: 16px;

    // Add some extra padding on android at the bottom
    // to make sure the add comment field is not hidden
    // behind the keyboard, Safari resize the viewport when
    // the keyboard pops out so it's not a problem
    &.android {
      padding-bottom: 25vh;
    }
  }

  div.activity-share-container {
    // position: unset;

    div.activity-share-modal-container {
      top: 36px;
      right: 64px;
      margin-top: 0;
    }
  }

  div.expanded-post-header {
    position: fixed;
    // Add 32 pixels to the width to account for the overflwoing comment menu
    width: #{$board_container_width + 32}px;
    height: 72px;
    padding: 24px 32px 16px 0;
    background-color: $grey_num_2;
    z-index: 102;

    &:before {
      content: "";
      width: #{$board_container_width}px;
      height: 1px;
      position: absolute;
      bottom: 0;
      left: 0;
      background-color: rgba($deep_navy, 0.15);
    }

    @include mobile() {
      width: 100vw;
      height: #{$mobile_navbar_height}px;
      padding: 11px 16px;
      position: fixed;
      top: 0;
      left: 0;
      border-bottom: 1px solid $divider_line_grey;
      background-color: white;

      &:before {
        display: none;
      }
    }

    button.back-to-board {
      float: left;
      height: 32px;
      width: 32px;
      border-radius: 4px;
      opacity: 1;
      background-color: rgba($deep_navy, 0.1);
      background-image: cdnUrl("/img/ML/expanded_post_back_arrow.svg");
      background-size: 14px 10px;
      background-repeat: no-repeat;
      background-position: center;

      @include mobile() {
        background-image: cdnUrl("/img/ML/mobile_dark_x.svg");
        background-size: 12px 12px;
      }

      @include big_web(){
        &:hover {
          background-color: rgba($deep_navy, 0.2);
        }
      }
    }

    div.expanded-post-wrt-container {
      float: right;
      position: relative;
      margin-top: 0;
      padding: 4px 16px 4px 0;

      &:after {
        content: "";
        position: absolute;
        right: 0;
        top: 0;
        width: 1px;
        height: 32px;
        background-color: rgba($deep_navy, 0.2);
      }

      @include mobile() {
        margin-top: 0;
      }

      div.wrt-count-container {
        height: 24px;

        div.wrt-count {
          line-height: 24px;
          color: $deep_navy;
          opacity: 1;
        }
      }
    }

    div.more-menu {
      float: right;
      height: 32px;

      div.activity-move {
        left: -64px;
        top: 34px;
      }

      button.more-menu-bt {
        width: 32px;
        height: 32px;
        background-color: transparent;
        border-radius: 4px;
        padding: 0;
        margin: 0 0 0 9px;
        opacity: 1;

        &:not(.disabled):hover, &:not(.disabled):active {
          background-color: transparent;
        }
      }

      div.more-menu-create-follow-up-bt-container {
        float: right;
      }

      ul.more-menu-list {
        top: 34px;
        left: 0px;
      }
    }
  }

  div.ziggeo-player {
    margin-top: 16px;
    width: 638px;
    height: 478px;
    position: relative;

    video {
      max-height: 478px;
    }

    @include mobile(){
      width: 100vw;
      height: calc(100vw *  0.75);
    }
  }

  div.expanded-post-headline {
    @include activity-title(26px, 33px);
    padding-top: #{72 + 40}px;

    @include mobile() {
      @include activity-title(22px, 28px);
      padding-top: 0;
    }
  }

  div.expanded-post-author {
    margin-top: 8px;
    min-height: 18px;

    div.expanded-post-author-inner {
      @include OC_Body_Book();
      font-size: 12px;
      color: rgba($deep_navy, 0.5);
      line-height: 18px;

      div.expanded-post-author-dot {
        width: 3px;
        height: 3px;
        border-radius: 50%;
        background-color: rgba($deep_navy, 0.2);
        margin: 0 6px 3px;
        display: inline-block;
      }

      span.expanded-post-author-inner-label {
        @include mobile() {
          margin-right: 8px;
          margin-bottom: 8px;
          display: inline-block;
        }
      }

      div.must-see-tag {
        display: inline-block;

        @include mobile() {
          display: inline-block;
          margin-left: 0;
          margin-top: 3px;
          margin-bottom: 8px;
          overflow: hidden;
          max-width: 100%;
          text-overflow: ellipsis;
          white-space: pre-wrap;
          word-break: break-word;
        }
      }

      @include follow-up-tag();

      div.follow-up-tag {
        display: inline-block;

        @include mobile() {
          display: inline-block;
          margin-left: 0;
          margin-top: 3px;
          margin-bottom: 8px;
          overflow: hidden;
          max-width: 100%;
          text-overflow: ellipsis;
          white-space: pre-wrap;
          word-break: break-word;
        }
      }
    }
  }

  div.expanded-post-abstract {
    @include activity-abstract(17px, 22px);
    margin: 16px 0 24px;
    @include OC_Body_Bold();
    white-space: pre-wrap;
    word-break: break-word;

    // Abstract is bold only in expanded post view
    // we need to make sure italic doesn't override
    // the font weight only here
    i, i strong, i b, b i, strong i {
      @include OC_Body_Bold_Italic();
    }

    @include mobile() {
      margin: 8px 0 16px;
    }
  }

  div.expanded-post-body {
    @include activity-body(17, 22, $deep_navy, 16);
    margin-top: 16px;

    @include mobile() {
      margin-top: 8px;
      @include activity-body(18, 24, $deep_navy, 16);
    }

    .interactive-image {
      cursor: zoom-in;

      &:hover {
        opacity: 0.7;
      }
    }
  }

  // div.expanded-post-mobile-reactions {
  //   display: none;

  //   @include mobile() {
  //     display: block;
  //     height: 48px;
  //     margin: 24px 0 0;
  //     padding-bottom: 16px;
  //     border-bottom: 1px solid $ultra_light_grey;
  //   }
  // }

  div.expanded-post-footer {
    margin-top: 24px;
    min-height: 26px;
    position: relative;

    @include mobile() {
      margin-top: 3px;
      min-height: 32px;
    }

    div.expanded-post-footer-mobile-group {
      @include mobile() {
        float: left;
        height: 20px;
        margin-top: 20px;
      }

      div.is-comments {
        div.is-comments-summary {
          color: $deep_navy;
        }
      }
    }

    div.is-comments {
      margin-right: 16px;
      float: left;
    }

    div.reactions {
      float: left;
      margin-right: 14px;

      @include mobile() {
        margin-top: 13px;
      }

      div.reactions-picker-container {
        div.emoji-mart {
          bottom: unset;
          top: 0;
          left: calc(100% + 8px);

          @include mobile(){
            bottom: unset;
            right: unset;
            top: unset;
            left: unset;
          }
        }
      }
    }
  }

  div.expanded-post-comments {
    padding-bottom: 0;
    margin-top: 40px;

    @include mobile() {
      margin-top: 16px;
      width: 100%;
      padding: 16px 0;
    }
  }
}

